use the runtime .anim format in the animation editor